--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Website</title>
+    <title>Are you ready for some sourcing magic?</title>
   </head>
   <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is my first website.</p>
+    <h1>Hello! Are you interested in sourcing?</h1>
+    <p>My name is Aga Rachwalak and I'm a huge fan of sourcing. I really value a good, deep search and candidate-first communication.</p>
+    <p>Are you looking for some sourcing tips? Let's reveal some secret knowlegde!</p>
   </body>
 </html>
