--- a/index.html
+++ b/index.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Are you ready for some sourcing magic?</title>
-  </head>
-  <body>
-    <h1>Hello! Are you interested in sourcing?</h1>
-    <p>My name is Aga Rachwalak and I'm a huge fan of sourcing. I really value a good, deep search and candidate-first communication.</p>
-    <p>Are you looking for some sourcing tips? Let's reveal some secret knowlegde!</p>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=1220, initial-scale=1.0">
+    <title>Aga Rachwalak | Sourcer | Trainer</title>
+
+    <link rel="stylesheet" href="bootstrap-social/bootstrap-social.css">
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
+    <link href="css/bootstrap.icon-large.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/custom.css">
+
+</head>
+<body>
+<div class="container">
+    <header id="top" class="row header-row">
+        <div class="col-xs-12 col-sm-4 col-md-4">
+            <img class="img-border img-circle img-responsive me-pic" src="img/avatar.jpg">
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 mt50 text-left">
+            <h1 class="text-center my-name">Aga Rachwalak</h1>
+            <h3 class="text-center job-title">Sourcer | Trainer</h3>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-offset-1 col-md-3 mt50 text-left">
+            <div class="contact-details">
+                <span class="icon-large icon-home"></span> Poznań, Poland 🇵🇱</div>
+            </div>
+            <div class="contact-details"><span class="icon-large icon-skype"></span>piotr.korlaga</div>
+            <div class="contact-details"><span class="icon-large icon-message-in"></span> mojmail@gmail.com</div>
+            <aside class="social-button-section hidden-print">
+                <span><a target="_blank" href="https://pl.linkedin.com/in/agnieszka-rachwalak"
+                         class="btn  btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a></span>
+                <span><a target="_blank" href="https://github.com/agasourcer"
+                         class="btn btn-social-icon btn-github"><span class="fa fa-github"></span></a></span>
+            </aside>
+        </div>
+    </header>
+
+    <hr/>
+
+    <section class="row">
+        <div class="col-sm-3 text-right">
+            <h1>Hello!</h1>
+        </div>
+        <div class="col-sm-8">
+            <p class="text-justify">
+                My name is Aga Rachwalak and I'm a sourcer at Box.
+            </p>
+
+            <p class="text-justify">
+                Moreover, I actively teach others how to open their mind and find some new ideas regarding sourcing.
+            </p>
+        </div>
+    </section> 
+    <hr/>
+
+    <footer class="row hidden-print">
+        <div class=""><p class="text-center">
+            &copy; 2023 Aga Rachwalak |
+            <a href="javascript:window.print()">Print</a> |
+            <a href="#top">Go to top <span class="glyphicon glyphicon-chevron-up"></span></a>
+        </p></div>
+    </footer>
+</div>
+
+
+<script src="bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="jquery/dist/jquery.min.js"></script>
+</body>
 </html>
